src/main/java/com/example/demo/exceptions/errors/NotFoundException.java
package com.example.demo.exceptions.errors;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }

    public NotFoundException() {
    }
}
